Fixing alignment

--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -66,7 +66,7 @@
         margin-left: 29px;
     }
     .about_img_3 {
-        margin-left: 15px;
+        margin-left: 45px;
     }
     &.img_style_02{
         position: relative;
